experiment_output/error_log/nondex-lavcraft-spring-boot-ripper-gradle:iron-starter.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task228/wd/NonDex-plugin-test/github.com/lavcraft/spring-boot-ripper-gradle/iron-starter/src/main/java/com/ironbank/moneyraven/starter/IronConfiguration.java:27: error: constructor IronListener in class IronListener cannot be applied to given types;
    return new IronListener(r);
           ^
  required: no arguments
  found: RavenProperties
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task228/wd/NonDex-plugin-test/github.com/lavcraft/spring-boot-ripper-gradle/iron-starter/src/main/java/com/ironbank/moneyraven/starter/IronListener.java:17: error: cannot find symbol
    ravenProperties.getКудаЛететь().forEach(s -> System.out.println("посылаю ворона в " + s));
                   ^
  symbol:   method getКудаЛететь()
  location: variable ravenProperties of type RavenProperties
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':iron-starter:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 5s
